--- a/Dockerfile.build
+++ b/Dockerfile.build
@@ -1,21 +1,31 @@
+# Use Python 3.9 slim image as the base image
 FROM python:3.9-slim
 
-# Install dependencies
-RUN apt-get clean && apt-get -y update && apt-get -y install nginx python3-dev build-essential nfs-common && rm -rf /var/lib/apt/lists/*
+# Install system dependencies
+RUN apt-get clean && apt-get -y update && apt-get -y install \
+    nginx \
+    python3-dev \
+    build-essential \
+    nfs-common \
+    && rm -rf /var/lib/apt/lists/*
 
 # Create mount point for NFS
 RUN mkdir -p /nfs
 
-COPY /data/demo.db /nfs
+# Copy database file to the NFS mount (ensure demo.db is in the correct path)
+COPY ./data/demo.db /nfs/
 
-# Copy application files
-COPY . .
+# Set the working directory for the Flask app
+WORKDIR /app
 
-# Install Python dependencies
-RUN pip install -r requirements1.txt
+# Copy application files (e.g., app.py, requirements.txt, etc.)
+COPY . /app
 
-# Expose port 5000 for the application
+# Install Python dependencies (ensure requirements1.txt exists in the project root)
+RUN pip install --no-cache-dir -r requirements1.txt
+
+# Expose port 5000 for the Flask application
 EXPOSE 5000
 
-# Command to run the application
-CMD ["python3", "main.py"] 
+# Command to run the Flask application
+CMD ["python3", "main.py"]
